# registry

./: .gitignore  main.py  pyproject.toml  sort.py
ftp/: get_phonebook.py  phonebook.xlsx
task/: get_task.py  kp_2018.xlsx  kp_2019.xlsx  kp_2020.xlsx  kp_2021.xlsx  kp_2022.xlsx  request_2020.xlsx  request_2021.xlsx  request_2022.xlsx
